--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ section{
     height: 40vw;
   
   }
-  #formula, .ajuste{
+  #formula, .ajuste, .quitar{
     display:none;
   }
   i{
@@ -160,7 +160,7 @@ object-fit: cover !important;
       height: 40vw;
       
     }
-    #formula{
+    #formula, .quitar{
       display:none;
     }
     p,span,label{
