--- a/style.css
+++ b/style.css
@@ -5,6 +5,19 @@ body {
     overflow-y: hidden;
     height:100vh;    
   }
+.colocar{
+  height: 200px;
+  width:200px;
+}
+
+.img-fluid{
+opacity:0.7;
+}
+
+.img-fluid:hover{
+  opacity:1;
+  border:#43A6CC 4px solid;
+  }
 
   span
   {
@@ -137,8 +150,13 @@ width: 100px !important;
 height: 100px !important;
 object-fit: cover !important;
 }
+.colocar{
+  width: 100px !important; 
+  height: 100px !important;
+  object-fit: contain !important;
+}
   
-  }
+}
 
   @media only screen and (max-width: 350px) {
      
